* fixed buffer overflow in delete() for widestrings (patch by     Martin Schreiber, #10800)
git-svn-id: trunk@10255 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7966,6 +7966,7 @@ tests/webtbs/tw10753.pp svneol=native#text/plain
 tests/webtbs/tw10753a.pp svneol=native#text/plain
 tests/webtbs/tw10757.pp svneol=native#text/plain
 tests/webtbs/tw10790.pp svneol=native#text/plain
+tests/webtbs/tw10800.pp svneol=native#text/plain
 tests/webtbs/tw1081.pp svneol=native#text/plain
 tests/webtbs/tw1090.pp svneol=native#text/plain
 tests/webtbs/tw1092.pp svneol=native#text/plain
